@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2007-2025 Crafter Software Corporation. All Rights Reserved.
+ * Copyright (C) 2007-2026 Crafter Software Corporation. All Rights Reserved.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 3 as published by
@@ -29,7 +29,6 @@ import org.apache.commons.configuration2.ex.ConfigurationRuntimeException;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.text.StringSubstitutor;
-import org.craftercms.commons.git.utils.AuthenticationType;
 import org.craftercms.commons.monitoring.VersionInfo;
 import org.craftercms.commons.plugin.PluginDescriptorReader;
 import org.craftercms.commons.plugin.exception.PluginException;
@@ -39,9 +38,7 @@ import org.craftercms.commons.plugin.model.PluginDescriptor;
 import org.craftercms.commons.plugin.model.Version;
 import org.craftercms.commons.rest.RestTemplate;
 import org.craftercms.studio.api.v1.constant.GitRepositories;
-import org.craftercms.studio.api.v1.constant.StudioConstants;
 import org.craftercms.studio.api.v1.exception.ContentNotFoundException;
-import org.craftercms.studio.api.v1.exception.EnvironmentNotFoundException;
 import org.craftercms.studio.api.v1.exception.ServiceLayerException;
 import org.craftercms.studio.api.v1.exception.SiteNotFoundException;
 import org.craftercms.studio.api.v1.exception.repository.InvalidRemoteRepositoryCredentialsException;
@@ -51,14 +48,13 @@ import org.craftercms.studio.api.v1.exception.repository.RemoteRepositoryNotFoun
 import org.craftercms.studio.api.v1.exception.security.AuthenticationException;
 import org.craftercms.studio.api.v1.exception.security.UserNotFoundException;
 import org.craftercms.studio.api.v1.service.configuration.ServicesConfig;
-import org.craftercms.studio.api.v1.service.content.ContentService;
-import org.craftercms.studio.api.v1.service.site.SiteService;
 import org.craftercms.studio.api.v2.dal.item.LightItem;
 import org.craftercms.studio.api.v2.exception.MissingPluginParameterException;
 import org.craftercms.studio.api.v2.exception.configuration.ConfigurationException;
 import org.craftercms.studio.api.v2.exception.marketplace.*;
 import org.craftercms.studio.api.v2.repository.RetryingRepositoryOperationFacade;
 import org.craftercms.studio.api.v2.service.config.ConfigurationService;
+import org.craftercms.studio.api.v2.service.content.ContentService;
 import org.craftercms.studio.api.v2.service.content.ContentTypeService;
 import org.craftercms.studio.api.v2.service.dependency.DependencyService;
 import org.craftercms.studio.api.v2.service.marketplace.*;
@@ -73,7 +69,8 @@ import org.craftercms.studio.api.v2.utils.GitRepositoryHelper;
 import org.craftercms.studio.api.v2.utils.StudioConfiguration;
 import org.craftercms.studio.impl.v2.utils.XsltUtils;
 import org.craftercms.studio.model.contentType.ContentTypeUsage;
-import org.craftercms.studio.model.rest.marketplace.CreateSiteRequest;
+import org.craftercms.studio.model.rest.marketplace.CreateSiteFromMarketplaceRequest;
+import org.craftercms.studio.model.rest.sites.CreateSiteRequest;
 import org.dom4j.*;
 import org.eclipse.jgit.api.AddCommand;
 import org.eclipse.jgit.api.CheckoutCommand;
@@ -118,11 +115,14 @@ import static java.util.stream.Collectors.toList;
 import static org.apache.commons.io.IOUtils.toInputStream;
 import static org.apache.commons.lang.text.StrSubstitutor.replace;
 import static org.apache.commons.lang3.StringUtils.*;
+import static org.apache.commons.lang3.Strings.CS;
 import static org.craftercms.studio.api.v1.constant.StudioConstants.PATTERN_MODULE;
 import static org.craftercms.studio.api.v2.service.marketplace.Constants.SOURCE_GIT;
 import static org.craftercms.studio.api.v2.utils.StudioConfiguration.CONFIGURATION_SITE_CONFIG_BASE_PATH_PATTERN;
+import static org.craftercms.studio.impl.v1.util.ContentUtils.convertStreamToString;
 import static org.craftercms.studio.impl.v2.utils.PluginUtils.*;
 import static org.craftercms.studio.impl.v2.utils.XsltUtils.executeTemplate;
+import static org.craftercms.studio.model.rest.sites.CreateSiteRequest.RemoteAuthentication.NONE;
 
 /**
  * Internal implementation of {@link MarketplaceService} that proxies all request to the configured Marketplace
@@ -161,8 +161,6 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 	private static final String HEADER_OS_ARCH = "x-os-arch";
 
 	protected final InstanceService instanceService;
-
-	protected final SiteService siteService;
 
 	protected final SitesService sitesServiceInternal;
 
@@ -275,12 +273,12 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 
 	protected final ContentTypeService contentTypeService;
 
-	@ConstructorProperties({"instanceService", "siteService", "sitesServiceInternal", "contentService",
+	@ConstructorProperties({"instanceService", "sitesServiceInternal", "contentService",
 		"studioConfiguration", "pluginDescriptorReader", "gitRepositoryHelper",
 		"pluginDescriptorFilename", "templateCode", "templateComment", "retryingRepositoryOperationFacade",
 		"dependencyService", "contentTypeService", "configurationService",
 		"servicesConfig", "publishService"})
-	public MarketplaceServiceInternalImpl(InstanceService instanceService, SiteService siteService,
+	public MarketplaceServiceInternalImpl(InstanceService instanceService,
 					      SitesService sitesServiceInternal, ContentService contentService,
 					      StudioConfiguration studioConfiguration,
 					      PluginDescriptorReader pluginDescriptorReader,
@@ -292,7 +290,6 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 					      ConfigurationService configurationService,
 					      ServicesConfig servicesConfig, PublishService publishService) {
 		this.instanceService = instanceService;
-		this.siteService = siteService;
 		this.sitesServiceInternal = sitesServiceInternal;
 		this.contentService = contentService;
 		this.studioConfiguration = studioConfiguration;
@@ -313,6 +310,7 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 		this.url = url;
 	}
 
+	@SuppressWarnings("unused")
 	public void setPluginRegistryPath(String pluginRegistryPath) {
 		this.pluginRegistryPath = pluginRegistryPath;
 	}
@@ -321,6 +319,7 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 		this.showPending = showPending;
 	}
 
+	@SuppressWarnings("unused")
 	public void setPluginsFolder(final String pluginsFolder) {
 		this.pluginsFolder = pluginsFolder;
 	}
@@ -443,7 +442,7 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 	}
 
 	@Override
-	public void createSite(CreateSiteRequest request) throws RemoteRepositoryNotFoundException,
+	public void createSite(CreateSiteFromMarketplaceRequest request) throws RemoteRepositoryNotFoundException,
 		InvalidRemoteRepositoryException, InvalidRemoteUrlException,
 		ServiceLayerException, InvalidRemoteRepositoryCredentialsException {
 
@@ -454,23 +453,39 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 			logger.debug("Use the default sandbox branch for site '{}'", request.getSiteId());
 			request.setSandboxBranch(studioConfiguration.getProperty(StudioConfiguration.REPO_SANDBOX_BRANCH));
 		}
-
 		if (isEmpty(request.getRemoteName())) {
 			logger.debug("Use the default remote name for site '{}'", request.getSiteId());
 			request.setRemoteName(studioConfiguration.getProperty(StudioConfiguration.REPO_DEFAULT_REMOTE_NAME));
 		}
 
-		MarketplacePlugin plugin = getDescriptor(request.getBlueprintId(), request.getBlueprintVersion());
-
-		validatePluginParameters(plugin, request.getSiteParams());
-
-		siteService.createSiteWithRemoteOption(request.getSiteId(), request.getName(), request.getSandboxBranch(),
-			request.getDescription(), request.getBlueprintId(), request.getRemoteName(),
-			plugin.getUrl(), plugin.getRef(), false, AuthenticationType.NONE, null,
-			null, null, null, StudioConstants.REMOTE_REPOSITORY_CREATE_OPTION_CLONE, request.getSiteParams(),
-			true);
+		CreateSiteRequest.RemoteSource createFromRemoteRequest = getCreateFromRemoteRequest(request);
+		sitesServiceInternal.createSite(createFromRemoteRequest);
 
 		logger.info("Site '{}' was created successfully", request.getSiteId());
+	}
+
+	/**
+	 * Build the CreateSiteRequest.RemoteSource object for the given CreateSiteFromMarketplaceRequest, validating the
+	 * request parameters and the plugin descriptor in the process
+	 */
+	protected CreateSiteRequest.RemoteSource getCreateFromRemoteRequest(CreateSiteFromMarketplaceRequest request) throws MarketplaceException {
+		MarketplacePlugin plugin = getDescriptor(request.getBlueprintId(), request.getBlueprintVersion());
+		validatePluginParameters(plugin, request.getSiteParams());
+
+		CreateSiteRequest.RemoteSource createFromRemoteRequest = new CreateSiteRequest.RemoteSource();
+		createFromRemoteRequest.setSiteId(request.getSiteId());
+		createFromRemoteRequest.setName(request.getName());
+		createFromRemoteRequest.setDescription(request.getDescription());
+		createFromRemoteRequest.setSiteParams(request.getSiteParams());
+		createFromRemoteRequest.setSandboxBranch(request.getSandboxBranch());
+		createFromRemoteRequest.setRemoteUrl(plugin.getUrl());
+		createFromRemoteRequest.setRemoteName(request.getRemoteName());
+		createFromRemoteRequest.setRemoteBranch(plugin.getRef());
+		createFromRemoteRequest.setAuthentication(NONE);
+		// The remoteBranch is set to the plugin ref, which actually seems to be a tag. That would
+		// fail since there is no branch like refs/heads/<tag>. So we are cloning all branches (which will bring the tags as well)
+		createFromRemoteRequest.setSingleBranch(false);
+		return createFromRemoteRequest;
 	}
 
 	@Override
@@ -528,16 +543,13 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 			createPluginConfig(siteDir, pluginIdPath, parameters, changedFiles);
 
 			Path temp = Files.createTempDirectory("plugin-" + marketplacePlugin.getId());
-			switch (marketplacePlugin.getSource()) {
-				case SOURCE_GIT:
-					clonePluginFromGit(marketplacePlugin, temp);
-					break;
-				default:
-					throw new IncompatiblePluginException(
+			if (!marketplacePlugin.getSource().equals(SOURCE_GIT)) {
+				throw new IncompatiblePluginException(
 						format("Plugin '%s' version '%s' from source '%s' can't be installed in site '%s' " +
-								"because the source of the plugin is not supported",
-							marketplacePlugin.getId(), pluginVersion, marketplacePlugin.getSource(), siteId));
+										"because the source of the plugin is not supported",
+								marketplacePlugin.getId(), pluginVersion, marketplacePlugin.getSource(), siteId));
 			}
+			clonePluginFromGit(marketplacePlugin, temp);
 
 			try (InputStream is = Files.newInputStream(temp.resolve(pluginDescriptorFilename))) {
 				// Load the plugin descriptor from the temp directory
@@ -672,7 +684,7 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 		Path registryFile = repoDir.resolve(pluginRegistryPath);
 		try (OutputStream os = Files.newOutputStream(registryFile)) {
 			mapper.writeValue(os, registry);
-			logger.debug("Successfully updated the plugin registry in site '{}'", siteId);
+			logger.debug("Successfully added the plugin '{}' to the registry in site '{}'", plugin.getId(), siteId);
 		} catch (JsonProcessingException e) {
 			logger.error("Failed to update the plugin registry in site '{}'", siteId, e);
 			throw new MarketplaceRegistryException(format("Failed to update the plugin registry in site '%s'",
@@ -691,7 +703,7 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 		Path registryFile = repoDir.resolve(pluginRegistryPath);
 		try (OutputStream os = Files.newOutputStream(registryFile)) {
 			mapper.writeValue(os, registry);
-			logger.debug("Successfully updated the plugin registry in site '{}'", siteId);
+			logger.debug("Successfully removed the plugin '{}' from the registry in site '{}'", pluginId, siteId);
 		} catch (JsonProcessingException e) {
 			logger.error("Failed to update the plugin registry in site '{}'", siteId);
 			throw new MarketplaceRegistryException(format("Failed to update the plugin registry in site '%s'",
@@ -825,7 +837,7 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 
 			// commit all changes
 			commitChanges(siteId, changedFiles, true, true, "Remove plugin " + pluginId);
-		} catch (IOException | GitAPIException | EnvironmentNotFoundException |
+		} catch (IOException | GitAPIException |
 			 SiteNotFoundException | TransformerException | UserNotFoundException | AuthenticationException e) {
 			if (CollectionUtils.isNotEmpty(changedFiles)) {
 				try {
@@ -875,7 +887,7 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 			parameters.forEach(config::addProperty);
 		}
 
-		String configPath = removeStart(getPluginConfigurationPath(studioConfiguration, pluginId), File.separator);
+		String configPath = CS.removeStart(getPluginConfigurationPath(studioConfiguration, pluginId), File.separator);
 		Path configFile = siteDir.resolve(configPath);
 		Files.createDirectories(configFile.getParent());
 		try (Writer writer = Files.newBufferedWriter(configFile, CREATE)) {
@@ -887,7 +899,7 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 	protected void removePluginConfig(Path siteDir, String pluginId,
 					  List<String> changedFiles) throws IOException {
 
-		String configPath = removeStart(getPluginConfigurationPath(studioConfiguration, pluginId), File.separator);
+		String configPath = CS.removeStart(getPluginConfigurationPath(studioConfiguration, pluginId), File.separator);
 		Path configFile = siteDir.resolve(configPath);
 		Files.deleteIfExists(configFile);
 		changedFiles.add(configPath);
@@ -908,7 +920,7 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 		Set<String> dependantItems = new TreeSet<>();
 		List<String> contentTypePaths = record.get().getFiles().stream()
 			.map(FileRecord::getPath)
-			.map(p -> prependIfMissing(p, File.separator))
+			.map(p -> CS.prependIfMissing(p, File.separator))
 			.filter(contentTypeRegex.asMatchPredicate())
 			.collect(toList());
 
@@ -1014,8 +1026,8 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 						List<Node> children = docRoot.selectNodes(root.getName());
 						if (CollectionUtils.isNotEmpty(children) && children.size() == 1) {
 							parentXpath += File.separator + root.getName();
-							root = root.getChildren().get(0);
-							docRoot = children.get(0);
+							root = root.getChildren().getFirst();
+							docRoot = children.getFirst();
 						} else {
 							completed = true;
 						}
@@ -1055,7 +1067,7 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 	}
 
 	protected void performTemplateWiring(Plugin plugin, String siteId, List<FileRecord> files,
-					     List<String> changedFiles) throws IOException {
+					     List<String> changedFiles) throws IOException, ContentNotFoundException {
 		List<String> paths = files.stream().map(FileRecord::getPath).collect(toList());
 		String pluginPath = getPluginPath(plugin.getId());
 		String pluginIdComment = replace(templateComment, Map.of(PARAM_PLUGIN_ID, plugin.getId()));
@@ -1070,18 +1082,18 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 
 	protected void addIncludeIfNeeded(String siteId, String pluginId, List<String> paths, String includePath,
 					  String includeComment, String pluginPath, List<String> changedFiles)
-		throws IOException {
+			throws IOException, ContentNotFoundException {
 		if (paths.contains(pluginPath)) {
 			logger.debug("Detected the template '{}' in the plugin '{}' while installing in site '{}'",
 				pluginPath, pluginId, siteId);
 			String fileContent = EMPTY;
 			if (contentService.contentExists(siteId, includePath)) {
 				logger.debug("Site '{}' already has the template '{}', it will be updated", siteId, includePath);
-				fileContent = contentService.getContentAsString(siteId, includePath);
+				fileContent = convertStreamToString(contentService.getContent(siteId, includePath));
 			} else {
 				logger.debug("Site '{}' does not have the template '{}', it will be created", siteId, includePath);
 			}
-			if (isEmpty(fileContent) || !contains(fileContent, includeComment)) {
+			if (isEmpty(fileContent) || !CS.contains(fileContent, includeComment)) {
 				logger.debug("Wire the plugin template '{}' into '{}' in site '{}'",
 					pluginPath, includePath, siteId);
 				String newLine =
@@ -1131,7 +1143,7 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 				List<String> lines = Files.readAllLines(hookFile);
 				// remove the lines related to the given plugin
 				List<String> newLines = lines.stream()
-					.filter(not(line -> contains(line, pluginId)))
+					.filter(not(line -> CS.contains(line, pluginId)))
 					.collect(toList());
 				// write the changes if any
 				if (newLines.size() < lines.size()) {
@@ -1184,7 +1196,7 @@ public class MarketplaceServiceInternalImpl implements MarketplaceService, Initi
 	protected String getConfigurationPath(String module, String filePath) {
 		String basePath = studioConfiguration.getProperty(CONFIGURATION_SITE_CONFIG_BASE_PATH_PATTERN)
 			.replaceAll(PATTERN_MODULE, module);
-		return Path.of(removeStart(basePath, File.separator), filePath).toString();
+		return Path.of(CS.removeStart(basePath, File.separator), filePath).toString();
 	}
 
 
